# servant

./: .travis.yml  sources.txt  stack.yaml
doc/tutorial/: Client.lhs
scripts/: ci.sh
servant/: CHANGELOG.md  servant.cabal
servant-client/: servant-client.cabal
servant-client/src/Servant/: Client.hs
servant-client/src/Servant/Common/: Req.hs
servant-client/test/Servant/: ClientSpec.hs
servant-comock/: servant-comock.cabal
servant-comock/src/Servant/: CoMock.hs
servant-comock/src/Servant/CoMock/: Internal.hs
servant-comock/src/Servant/CoMock/Internal/: Benchmarking.hs  CoMock.hs  Predicates.hs  Testable.hs
servant-comock/test/Servant/CoMock/: InternalSpec.hs
servant-docs/src/Servant/Docs/: Internal.hs
servant-examples/: servant-examples.cabal
servant-foreign/src/Servant/Foreign/: Internal.hs
servant-js/: servant-js.cabal
servant-mock/: servant-mock.cabal
servant-server/: servant-server.cabal
servant-server-common/: CHANGELOG.md  servant-server-common.cabal
servant-server/example/: greet.hs
servant-server/src/Servant/: Server.hs
servant-server/src/Servant/Server/: CombinatorUtils.hs  Internal.hs
servant-server/src/Servant/Server/Internal/: Auth.hs  Config.hs  Context.hs  Enter.hs  ServantM.hs
servant-server/src/Servant/Server/Utils/: CustomCombinators.hs
servant-server/src/Servant/Utils/: StaticFiles.hs
servant-server/test/Servant/: ServerSpec.hs
servant-server/test/Servant/Server/: CombinatorUtilsSpec.hs  ErrorSpec.hs  RouterSpec.hs  UsingContextSpec.hs  UsingOtherConfigSpec.hs
servant-server/test/Servant/Server/Internal/: ConfigSpec.hs  EnterSpec.hs
servant-server/test/Servant/Server/Utils/: CustomCombinatorsSpec.hs
servant-server/test/Servant/Utils/: StaticFilesSpec.hs
servant-wai/: CHANGELOG.md  servant-wai.cabal
servant/src/Servant/: API.hs
servant/src/Servant/API/: ContentTypes.hs  Raw.hs
servant/src/Servant/Utils/: Links.hs  Map.hs  ValidateAPI.hs
servant/test/Servant/API/: ContentTypesSpec.hs
servant/test/Servant/Utils/: LinksSpec.hs  MapSpec.hs
