name:                servant-comock
version:             0.5.0.0
synopsis:            QuickCheck servant APIs
description:
 This packages provides QuickCheck properties that across a whole API.

license:             BSD3
license-file:        LICENSE
author:              Julian K. Arni
maintainer:          jkarni@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Servant.CoMock
                     , Servant.CoMock.Internal
                     , Servant.CoMock.Internal.Predicates
                     , Servant.CoMock.Internal.Testable
                     , Servant.CoMock.Internal.CoMock
  build-depends:       base >=4.8 && <4.9
                     , QuickCheck == 2.8.*
                     , mtl == 2.2.*
                     , http-client == 0.4.*
                     , http-types == 0.9.*
                     , servant-client == 0.5.*
                     , servant-server == 0.5.*
                     , servant == 0.5.*
                     , warp >= 3.2.4 && < 3.3
                     , hspec
  hs-source-dirs:      src
  default-extensions:  TypeOperators
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
                     , GADTs
                     , MultiParamTypeClasses
                     , DeriveFunctor
                     , RankNTypes
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Servant.CoMock.InternalSpec
  build-depends:       base == 4.*
                     , servant-comock
                     , hspec
                     , http-client
                     , warp
                     , servant-server
                     , servant-client
                     , transformers
                     , QuickCheck
  default-extensions:  TypeOperators
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
  if flag(long-tests)
      cpp-options: -DLONG_TESTS

flag long-tests
  description: Run more QuickCheck tests
  default:     False
